--- a/index.html
+++ b/index.html
@@ -6,12 +6,47 @@
   <meta name="viewport" content="width=device-width">
   <title>Simple Form</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/emmet/2.3.6/emmet.cjs.js"></script>
 </head>
 <body>
   <div class="container">
-    <h1 class="brand">J.King Web Design</h1></div>
+    <h1 class="brand">J. King Web Design</h1>
     <div class="wrapper">
+      <div class="company-info">
+        <h3>J. King Web Design</h3>
+        <ul>
+          <li>123 Jackson St.</li>
+          <li>609-428-0000</li>
+          <li>king.jarreau@gmail.com</li>
+        </ul>
+      </div>
+      <div class="contact">
+        <h3>Email Us</h3>
+        <form>
+          <p>
+            <label>Name</label>
+            <input type="text" name="name">
+          </p>
+          <p>
+            <label>Company</label>
+            <input type="text" name="company">
+          </p>
+          <p>
+            <label>Email Address</label>
+            <input type="email" name="email">
+          </p>
+          <p>
+            <label>Phone Number</label>
+            <input type="text" name="phone">
+          </p>
+          <p>
+            <label>Message</label>
+            <textarea name="message" rows="5"></textarea>
+          </p>
+          <p>
+            <label>Name</label>
+            <input type="text" name="name">
+          </p>
+        </form>
 
 </body>
 
